--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "virtualization-lms-core"]
 	path = virtualization-lms-core
-	url = git@github.com:Stivo/virtualization-lms-core.git
+	url = git://github.com/Stivo/virtualization-lms-core.git
